crates/uitest/fixtures/ty_check/error_indexed_field.snap
---
source: crates/uitest/tests/ty_check.rs
expression: diags
input_file: fixtures/ty_check/error_indexed_field.fe
---
error[12-0001]: unsupported `#[indexed]` attribute on struct field `code`
  ┌─ error_indexed_field.fe:3:5
  │
3 │     #[indexed]
  │     ^^^^^^^^^^ `#[indexed]` is only supported on event fields
